--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,21 +4,12 @@ body{
   background-color: rgba(0, 0, 0, 0.950);
   padding-top:60px;
 }
-@media screen and (max-width: 767px) {
-  body { padding-top: 60px; }
-}
-@media screen and (min-width:768px) and (max-width: 991px) {
-  body { padding-top: 110px; }
-}
-@media screen and (min-width: 992px) {
-  body { padding-top: 60px; }
-}
 
 .my-picture {
   display: block;
   margin: 3% auto 0 auto;
   height: auto;
-  width: auto;
+  width: 55%;
   border-radius: 10%;
 }
 
@@ -39,3 +30,12 @@ body{
 .body-text {
   font-size: 24px;
 }
+
+.anchors {
+  padding-top: 60px;
+}
+
+// .white-border {
+//   border-top: 3px solid white;
+//   margin-top: 3%;
+// }
