--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,19 +7,17 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to 'Home', root_path, class: 'nav-link' %>
+          <a href="#about-me" class="nav-link">About Me</a>
         </li>
         <li class="nav-item">
-          <%= link_to 'About Me', about_me_path, class: 'nav-link' %>
+          <a href="#my-credentials" class="nav-link">My Credentials</a>
         </li>
         <li class="nav-item">
-          <%= link_to 'My Credentials', my_credentials_path, class: 'nav-link' %>
+          <a href="#my-work" class="nav-link">My Work</a>
         </li>
         <li class="nav-item">
-          <%= link_to 'My Work', my_work_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Contact Me', contact_me_path, class: 'nav-link' %>
+          <!-- <a class="nav-link" href="mailto: markbezsonov@gmail.com">Contact Me</a> -->
+          <a href="#contact-me" class="nav-link">Contact Me</a>
         </li>
       </ul>
     </div>
