--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,21 +1,24 @@
 @import 'bootstrap/dist/css/bootstrap';
 
-body{
-  background-color: rgba(0, 0, 0, 0.950);
-  padding-top:60px;
+body {
+  background-color: rgba(0, 0, 0, 0.925)
 }
 
 .my-picture {
   display: block;
-  margin: 3% auto 0 auto;
+  margin: 9% auto 3% auto;
   height: auto;
-  width: 55%;
+  width: 80%;
   border-radius: 10%;
 }
 
 .title-text {
   font-family: 'Trebuchet MS', Helvetica, sans-serif;
   font-size: 75px;
+}
+
+.subtitle-text {
+  color: rgb(255, 246, 192);
 }
 
 .body-text {
@@ -35,7 +38,36 @@ body{
   padding-top: 60px;
 }
 
-// .white-border {
-//   border-top: 3px solid white;
-//   margin-top: 3%;
-// }
+.border {
+  border-bottom: solid;
+  border-width:  75%;
+  color: white;
+}
+
+.card-img-top {
+  display: block;
+  margin: 1% auto 1% auto;
+  width: 80%;
+}
+
+.card {
+  background-color: rgba(255, 255, 255, 0.822)
+}
+
+.testing {
+  margin-left: 5%;
+}
+
+.credentials a {
+  color: rgb(255, 246, 192);
+}
+
+.card a {
+  color: black;
+}
+
+a:hover {
+  color:#00A0C6; 
+  text-decoration:none; 
+  cursor:pointer;  
+}
