--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,48 +1,69 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-16">
       <%= image_tag 'me.jpg', size: '1119x797', class: 'my-picture img-fluid' %>
     </div>
   </div>
   <div class="row">
-    <!-- <div class="white-border"></div> -->
     <h1 class="col-10 mt-4 text-white title-text">Hi, I'm Mark. I'm a self-taught full-stack Ruby on Rails developer.</h1>
     <div class="col-2 row d-flex flex-wrap align-items-center mt-4" id='socials'>
       <a href="https://github.com/MarkBezsonov"><img src="/assets/github.jpg" class="float-end" alt="My Github link"></a>
       <a href="https://www.linkedin.com/in/mark-b-31947b11a/"><img src="/assets/linkedin.jpg" class="float-end" alt="My LinkedIn link"></a>
       <a href="mailto: markbezsonov@gmail.com"><img src="/assets/email.jpg" class="float-end" alt="My email link"></a>
     </div>
+    <div class="border mt-4"></div>
   </div>
 
   <div class="anchors" id="about-me"></div>
-  <!-- <div class="white-border"></div> -->
-  <h2 class="text-warning mt-4 subtitle-text">"Nice to meet you! Tell me about yourself."</h2>
+  <h2 class="mt-4 subtitle-text">"Nice to meet you! Tell me about yourself."</h2>
   <p class="mt-4 text-white body-text">
-    I started my programming journey back in November of 2020. Ever since then, I have been finding ways to 
+    <!-- I started my programming journey back in November of 2020. Ever since then, I have been finding ways to 
     constantly challenge myself to improve enough to where this newfound skill can eventually become a 
     life-long career. Through the several hundreds of lessons in my Udemy course, I transformed my knowledge from
     simple methods to entire full-stack websites. Me making this portfolio a little over a year later marks 
     me finally being ready to plunge into the professional world of programming (and thus make something of 
-    the <em>countless</em> number of hours put into the process).
+    the <em>countless</em> number of hours put into the process). -->
+    By the age-old process of finding oneself, I started my programming journey in November of 2020. As someone
+    who is motivated by self-improvement, I have been challenging myself to learn and absorb
+    many newfound aspects of programming with an aspiration to see a life-long career flourish. Through the
+    hundreds of lessons that I have taken through Udemy, I have enhanced my knowledge from simple
+    methods to entire full-stack websites. 
+    <br><br>
+    <!-- Before I started this journey, I foresaw programming to be a simple black-and-white skill, but perhaps it
+    was the neverending wealth of capability and erudition that drew and beckoned me to further develop my 
+    skills. What truly fascinates me about learning all of these languages, is that there is <i>never</i> a 
+    glass full of mastery! Challenges do nothing but excite and enthrall me, for I see them as an opportunity
+    for growth - and that is exactly what coding is, for me. -->
+    Although I enjoyed watching myself improve over time, it certainly wasn't easy! I quickly realized that with
+    every hour spent on coursework and projects, there would be, <em>at the very least,</em> a handful spent 
+    researching and fixing any hiccups that can (and certainly do) arise. This process was the perfect 
+    balance of being rewarding enough to keep moving forward, but challenging enough to where the knowledge is properly 
+    reinforced. As a whole, that is <em>exactly</em> what programming is to 
+    me - a process of neverending growth!
+    <br><br>
+    The creation of this portfolio marks a just over a year since I started delving into the programming world. I
+    hope to continue this odyssey alongside you and your team!
   </p>
   <p class="mt-4 text-white body-text">
-    If I'm not learning something programming related, I also enjoy producing electronic music and going to
+    <!-- If I'm not learning something programming related, I also enjoy producing electronic music and going to
     the gym (6 days a week) in my spare time. I sprinkle in a bit of gaming when I feel like I have earned it
-    as well. I'm also a huge technology enthusiast!
+    as well. I'm also a huge technology enthusiast! -->
   </p>
 
   <div class="anchors" id="my-credentials"></div>
-  <!-- <div class="white-border"></div> -->
-  <h2 class="text-warning mt-4 subtitle-text">"I see. What do you bring to the table?"</h2>
+  <h2 class="mt-4 subtitle-text">"I see. What do you bring to the table?"</h2>
   <p class="mt-4 text-white body-text">
-    Excellent question! I'm glad that you asked.
+    <!-- Excellent question! I'm glad that you asked.
     
     This can be broken down into two main categories: <strong>hard 
-    skills</strong> and <strong>soft skills</strong>. They are as follows:
+    skills</strong> and <strong>soft skills</strong>. They are as follows: -->
+    Asides from the ability to work with a team and the constant yearning for growth, I've also got the
+    technical skills to make the magic happen:
   </p>
   <div class="container">
-    <div class='row col-md-12'>
-      <ul class='col-6 text-white'><h4 class='mt-4 mb-4'>Hard Skills:</h4>
+    <div class="row col-md-12">
+      <div class="col-1"></div>
+      <ul class="col-7 text-white"><h4 class='mt-4 mb-4'>Hard Skills:</h4>
         <li>Ruby v2-3</li>
         <li>Javascript (Basic)</li>
         <li>Sinatra Full-Stack Utilization</li>
@@ -55,15 +76,18 @@
         <li>Semantic-UI</li>
         <li>ActionCable via WebSocket</li>
         <li>Devise Authentication</li>
-        <li>Ajax</li>
+        <li>AJAX</li>
         <li>API Utilization</li>
         <li>Nokogiri Web Scraping</li>
         <li>CLI Creation/Implementation</li>
         <li>Sendgrid Email Implementation</li>
         <li>Stripe API Secure Payment Implementation</li>
         <li>AWS S3 Bucket Implementation</li>
+        <li>SQLite3</li>
+        <li>Russian</li>
+        <li>French (Basic)</li>
       </ul>
-      <ul class='col-6 text-white'><h4 class='mt-4 mb-4'>Soft Skills:</h4>
+      <ul class="col-4 text-white"><h4 class="mt-4 mb-4">Soft Skills:</h4>
         <li>Quick Learner</li>
         <li>Leadership</li>
         <li>Public Speaking</li>
@@ -72,27 +96,47 @@
         <li>Positive Outlook</li>
         <li>Team Oriented</li>
         <li>Discipline</li>
+        <li>Time Management</li>
+        <li>Work Ethic</li>
+        <li>Multitasking</li>
+        <li>Decision Making</li>
+        <li>Performance Under Pressure</li>
+        <li>Problem Solving</li>
+        <li>Flexibility</li>
+        <li>Relationship Building</li>
+        <li>Accountability</li>
+        <li>Dependability</li>
+        <li>Integrity</li>
+        <li>Effective Communication</li>
+        <li>Critical Thinking</li>
+        <li>Goal Setting</li>
       </ul>
     </div>
   </div>
-  <p class="mt-4 text-white body-text">
-    On top of those, you can also view my Udemy course certificate <a href="">here</a> and my resume <a href="">here</a>!
+  <p class="mt-4 text-white body-text credentials">
+    You can also view my Udemy course certificate <a href="/assets/resume.pdf">here</a> and my resume <a href="/assets/udemy-certificate.jpg">here</a>!
   </p>
 
   <div class="anchors" id="my-work"></div>
-  <!-- <div class="white-border"></div> -->
-  <h2 class="text-warning mt-4 subtitle-text">"Interesting. Can you prove it?"</h2>
+  <h2 class="mt-4 subtitle-text">"Interesting. Can you prove it?"</h2>
   <p class="mt-4 text-white body-text">
-    I sure can! I have a total of 5 websites built from scratch using Bootstrap (including this one!) and Semantic-UI 
+    <!-- I sure can! I have a total of 5 websites built from scratch using Bootstrap (including this one!) and Semantic-UI 
     for the Message Me app. Check out the cards below for links to each one alongside a short description and list of
-    which technologies were used in the making of the site:
+    which technologies were used in the making of the site: -->
+    You got it! I have a total of five websites built from scratch using Bootstrap (<em>including this one!</em>) and
+    Semantic-UI for the Message Me app!
+    Below are the links to each website:
   </p>
-  <p class="mt-4 text-success body-text">
-    For Testing, Feel Free to Use the Following:
-    <li class="text-success">Username: markbezsonov@gmail.com</li>
-    <li class="text-success mt-2 mb-4">Password: password</li>
+  <!-- (IT'S ME, YOUR BOO!)
+  can you move the testing text and shift it right, like when you (TAB) something in word or like... indent a paragraph?
+  also make the space between the two bullets smaller, and maybe see what it would look like if you lessened the space between
+  the bullets and the "FOR TESTING, FEEL FREE TO USE THE FOLLOWING". -->
+  <p class="testing col-10 mt-4 text-white body-text">
+    <em>For Testing, Feel Free to Use the Following:</em>
+    <li class="testing text-white"><i><u>Username</u></i>: markbezsonov@gmail.com</li>
+    <li class="testing text-white mb-4"><i><u>Password</u></i>: password</li>
   </p>
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="row row-cols-1 row-cols-md-2 g-4 mt-4">
     <div class="col">
       <div class="card">
         <a href="https://markbezsonov-alpha-blog.herokuapp.com/"><img src="/assets/alpha-blog.jpg" class="card-img-top" alt="A snippet of my website, Alpha Blog"></a>
@@ -106,7 +150,7 @@
             <ul class=col-md-6>
               <li>Ruby v2</li>
               <li>Rails v6</li>
-              <li>HTML</li>
+              <li>HTML</li> 
               <li>(S)CSS</li>
               <li>Bootstrap v5</li>
               <li>jQuery (Basic)</li>
@@ -144,8 +188,9 @@
           <h5 class="card-title"><a href="https://markbezsonov-finance-tracker.herokuapp.com/">Finance Tracker</a></h5>
           <p class="card-text">
             A stock tracking application that uses the IEX Cloud API to provide users with real-time information 
-            regarding the stocks of their choice. Users can add stocks to keep track of with each stock having
-            its own dedicated information page.
+            regarding the stocks of their choice. Users can add stocks to keep track of to their personal portfolio,
+            each stock having its own dedicated information page. Users may also add friends and see their
+            portfolios.
           </p>
           <p class="card-text text-danger">  
             Please note that the values are in the free sandbox mode and hence incoherent to realistic values. 
@@ -163,7 +208,7 @@
               <li>jQuery (Basic)</li>
               <li>Chart.js</li>
               <li>Devise Authentication</li>
-              <li>Ajax</li>
+              <li>AJAX</li>
               <li>API Utilization</li>
             </ul>
           </p>
@@ -181,7 +226,7 @@
           </p>
           <p class="card-text text-success">
             Stripe Test CC#: 4242-4242-4242-4242<br>
-            Stripe Test CCV: 111
+            Stripe Test CCV: 111<br>
           </p>
           <p><a class="card-text" href="https://github.com/MarkBezsonov/photo_app">View GitHub Repository</a></p>
           <p class="card-text">Technologies featured:
@@ -193,7 +238,7 @@
               <li>Bootstrap v4</li>
               <li>jQuery (Basic)</li>
               <li>Devise Authentication</li>
-              <li>Ajax</li>
+              <li>AJAX</li>
               <li>API Utilization</li>
               <li>Sendgrid Email Implementation</li>
               <li>Stripe API Secure Payment Implementation</li>
@@ -206,8 +251,7 @@
   </div>
 
   <div class="anchors" id="contact-me"></div>
-  <!-- <div class="white-border"></div> -->
-  <h2 class="text-warning mt-4 subtitle-text">"I like what I see! How can we get in touch?"</h2>
+  <h2 class="mt-4 subtitle-text">"I like what I see! How can we get in touch?"</h2>
   <p class="mt-4 text-white body-text">
     To keep our wonderful conversation going, feel free to click/tap on your preferred platform below:
   </p>
@@ -217,6 +261,6 @@
     <a href="mailto: markbezsonov@gmail.com"><img src="/assets/email.jpg" class="m-4" alt="My email link"></a>
   </div>
   <p class="mt-4 text-white body-text">
-    This conversation was nice. In the meanwhile, I will be preparing for our <em>real</em> one on one. I'll see you then!
+    This conversation was great! In the meanwhile, I will be preparing for our <em>real</em> one on one, coffee on me! I'll see you then!
   </p>
 </div>
