Re-install yarn and npm

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,7 +28,7 @@
     researching and fixing any hiccups that can (and certainly do) arise. This process was the perfect 
     balance of being rewarding enough to keep moving forward, but challenging enough to where the knowledge is properly 
     reinforced. As a whole, that is <em>exactly</em> what programming is to 
-    me - a process of neverending growth!
+    me - a process of never-ending growth!
     <br><br>
     The creation of this portfolio marks a just over a year since I started delving into the programming world. I
     hope to continue this odyssey alongside you and your team!
