Switch pictures to rails styling for Heroku display

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,9 +7,9 @@
   <div class="row">
     <h1 class="col-10 mt-4 text-white title-text">Hi, I'm Mark. I'm a self-taught full-stack Ruby on Rails developer.</h1>
     <div class="col-2 row d-flex flex-wrap align-items-center mt-4" id='socials'>
-      <a href="https://github.com/MarkBezsonov"><img src="/assets/github.jpg" class="float-end" alt="My Github link"></a>
-      <a href="https://www.linkedin.com/in/mark-b-31947b11a/"><img src="/assets/linkedin.jpg" class="float-end" alt="My LinkedIn link"></a>
-      <a href="mailto: markbezsonov@gmail.com"><img src="/assets/email.jpg" class="float-end" alt="My email link"></a>
+      <a href="https://github.com/MarkBezsonov"><%= image_tag 'github.jpg', class: 'float-end' %></a>
+      <a href="https://github.com/MarkBezsonov"><%= image_tag 'linkedin.jpg', class: 'float-end' %></a>
+      <a href="mailto: markbezsonov@gmail.com"><%= image_tag 'email.jpg', class: 'float-end' %></a>
     </div>
     <div class="border mt-4"></div>
   </div>
@@ -112,7 +112,7 @@
   <div class="row row-cols-1 row-cols-md-2 g-4 mt-4">
     <div class="col">
       <div class="card">
-        <a href="https://markbezsonov-alpha-blog.herokuapp.com/"><img src="/assets/alpha-blog.jpg" class="card-img-top" alt="A snippet of my website, Alpha Blog"></a>
+        <a href="https://markbezsonov-alpha-blog.herokuapp.com/"><%= image_tag 'alpha-blog.jpg', class: 'card-img-top' %></a>
         <div class="card-body">
           <h5 class="card-title"><a href="https://markbezsonov-alpha-blog.herokuapp.com/">Alpha Blog</a></h5>
           <p class="card-text">
@@ -134,7 +134,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <a href="https://markbezsonov-message-me.herokuapp.com/"><img src="/assets/message-me.jpg" class="card-img-top" alt="A snippet of my website, Message Me"></a>
+        <a href="https://markbezsonov-message-me.herokuapp.com/"><%= image_tag 'message-me.jpg', class: 'card-img-top' %></a>
         <div class="card-body">
           <h5 class="card-title"><a href="https://markbezsonov-message-me.herokuapp.com/">Message Me</a></h5>
           <p class="card-text">
@@ -156,7 +156,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <a href="https://markbezsonov-finance-tracker.herokuapp.com/"><img src="/assets/finance-tracker.jpg" class="card-img-top" alt="A snippet of my website, Finance Tracker"></a>
+        <a href="https://markbezsonov-finance-tracker.herokuapp.com/"><%= image_tag 'finance-tracker.jpg', class: 'card-img-top' %></a>
         <div class="card-body">
           <h5 class="card-title"><a href="https://markbezsonov-finance-tracker.herokuapp.com/">Finance Tracker</a></h5>
           <p class="card-text">
@@ -190,7 +190,7 @@
     </div>
     <div class="col">
       <div class="card">
-        <a href="https://markbezsonov-photo-app.herokuapp.com/"><img src="/assets/photo-app.jpg" class="card-img-top" alt="A snippet of my website, Photo App"></a>
+        <a href="https://markbezsonov-photo-app.herokuapp.com/"><%= image_tag 'photo-app.jpg', class: 'card-img-top' %></a>
         <div class="card-body">
           <h5 class="card-title"><a href="https://markbezsonov-photo-app.herokuapp.com/">Photo App</a></h5>
           <p class="card-text">
@@ -229,9 +229,9 @@
     To keep our wonderful conversation going, feel free to click/tap on your preferred platform below:
   </p>
   <div class="col-md-12 text-center mt-4" id='socials'>
-    <a href="https://github.com/MarkBezsonov"><img src="/assets/github.jpg" class="m-4" alt="My Github link"></a>
-    <a href="https://www.linkedin.com/in/mark-b-31947b11a/"><img src="/assets/linkedin.jpg" class="m-4" alt="My LinkedIn link"></a>
-    <a href="mailto: markbezsonov@gmail.com"><img src="/assets/email.jpg" class="m-4" alt="My email link"></a>
+    <a href="https://github.com/MarkBezsonov"><%= image_tag 'github.jpg', class: 'm-4' %></a>
+    <a href="https://www.linkedin.com/in/mark-b-31947b11a/"><%= image_tag 'linkedin.jpg', class: 'm-4' %></a>
+    <a href="mailto: markbezsonov@gmail.com"><%= image_tag 'email.jpg', class: 'm-4' %></a>
   </div>
   <p class="mt-4 text-white body-text">
     This conversation was great! In the meanwhile, I will be preparing for our <em>real</em> one on one, coffee on me! I'll see you then!
