--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -60,7 +60,7 @@
         <li>API Utilization</li>
         <li>Nokogiri Web Scraping</li>
         <li>CLI Creation/Implementation</li>
-        <li>Sendgrid Email Implementation</li>
+        <li>SendGrid Email Implementation</li>
         <li>Stripe API Secure Payment Implementation</li>
         <li>AWS S3 Bucket Implementation</li>
         <li>SQLite3</li>
