Update resume and cert links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,11 +64,13 @@
         <li>Stripe API Secure Payment Implementation</li>
         <li>AWS S3 Bucket Implementation</li>
         <li>SQLite3</li>
+        <li>Heroku</li>
+        <li>Redis</li>
         <li>Russian</li>
         <li>French (Basic)</li>
       </ul>
       <ul class="col-4 text-white"><h4 class="mt-4 mb-4">Soft Skills:</h4>
-        <li>Quick Learner</li>
+        <li>Quick Learning</li>
         <li>Leadership</li>
         <li>Public Speaking</li>
         <li>Organization</li>
@@ -94,7 +96,7 @@
     </div>
   </div>
   <p class="mt-4 text-white body-text credentials">
-    You can also view my Udemy course certificate <a href="/assets/resume.pdf">here</a> and my resume <a href="/assets/udemy-certificate.jpg">here</a>!
+    You can also view my Udemy course certificate <%= link_to 'here', "/assets/resume.pdf" %> and my resume <%= link_to 'here', "/assets/udemy-certificate.jpg" %>!
   </p>
 
   <div class="anchors" id="my-work"></div>
