--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row">
-    <h1 class="col-10 mt-4 text-white title-text">Hi, I'm Mark. I'm a self-taught full-stack Ruby on Rails developer.</h1>
+    <h1 class="col-10 mt-4 text-white title-text">Hi, I'm Mark. I'm a full-stack Ruby on Rails developer.</h1>
     <div class="col-2 row d-flex flex-wrap align-items-center mt-4" id='socials'>
       <a href="https://github.com/MarkBezsonov"><%= image_tag 'github.jpg', class: 'float-end' %></a>
       <a href="https://github.com/MarkBezsonov"><%= image_tag 'linkedin.jpg', class: 'float-end' %></a>
