Made links open in new tab and update resume

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -96,7 +96,7 @@
     </div>
   </div>
   <p class="mt-4 text-white body-text credentials">
-    You can also view my Udemy course certificate <%= link_to 'here', "/assets/resume.pdf" %> and my resume <%= link_to 'here', "/assets/udemy-certificate.jpg" %>!
+    You can also view my Udemy course certificate <%= link_to 'here', "/assets/udemy-certificate.jpg", target: :_blank %> and my resume <%= link_to 'here', "/assets/resume.pdf", target: :_blank %>!
   </p>
 
   <div class="anchors" id="my-work"></div>
