--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar-custom navbar fixed-top navbar-expand-lg navbar-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Mark Bezsonov</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,16 +7,18 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="#about-me" class="nav-link">About Me</a>
+          <a href="#about" class="nav-link">About</a>
         </li>
         <li class="nav-item">
-          <a href="#my-credentials" class="nav-link">My Credentials</a>
+          <a href="#projects" class="nav-link">Projects</a>
         </li>
         <li class="nav-item">
-          <a href="#my-work" class="nav-link">My Work</a>
+          <a href="#contact" class="nav-link">Contact</a>
         </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a href="#contact-me" class="nav-link">Contact Me</a>
+          <%= link_to 'View Resume', "/assets/resume.pdf", target: :_blank, class: 'nav-link' %>
         </li>
       </ul>
     </div>
