Rework layout and resume

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,44 +4,11 @@ body {
   background-color: rgba(0, 0, 0, 0.925)
 }
 
-.my-picture {
-  display: block;
-  margin: 9% auto 3% auto;
-  height: auto;
-  width: 80%;
-  border-radius: 10%;
-}
-
 @media (min-width: 0px) {
   .my-picture {
-    margin: 8% auto 2.7% auto;
-    width: 75%;
-  }
-}
-
-@media (min-width: 768px) {
-  .my-picture {
-    margin: 7% auto 2.4% auto;
-    width: 70%;
-  }
-}
-
-@media (min-width: 992px) {
-  .my-picture {
-    margin: 6% auto 2.1% auto;
-    width: 65%;
-  }
-}
-
-@media (min-width: 1200px) {
-  .my-picture {
-    margin: 5% auto 1.8% auto;
-    width: 60%;
-  }
-}
-
-@media (min-width: 1400px) {
-  .my-picture {
+    display: block;
+    height: auto;
+    border-radius: 10%;
     margin: 12% auto 1.5% auto;
     width: 65%;
   }
@@ -56,11 +23,139 @@ body {
   }
 
   #contact-subtitle {
-    padding-top: 9%;
+    padding-top: 19%;
   }
 
   #end {
-    padding-top: 9.5%;
+    padding-top: 19.5%;
+  }
+
+  .messages {
+    margin: 3% auto -3% auto;
+  }
+}
+
+@media (min-width: 768px) {
+  .my-picture {
+    display: block;
+    height: auto;
+    border-radius: 10%;
+    margin: 12% auto 1.5% auto;
+    width: 65%;
+  }
+
+  #about-subtitle {
+    padding-top: 14%;
+  }
+
+  #projects {
+    margin-top: 21%;
+    padding-top: 8%;
+  }
+
+  #contact-subtitle {
+    padding-top: 19%;
+  }
+
+  #end {
+    padding-top: 19.5%;
+  }
+
+  .messages {
+    margin: 3% auto -3% auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .my-picture {
+    display: block;
+    height: auto;
+    border-radius: 10%;
+    margin: 12% auto 1.5% auto;
+    width: 65%;
+  }
+
+  #about-subtitle {
+    padding-top: 14%;
+  }
+
+  #projects {
+    margin-top: 21%;
+    padding-top: 8%;
+  }
+
+  #contact-subtitle {
+    padding-top: 19%;
+  }
+
+  #end {
+    padding-top: 19.5%;
+  }
+
+  .messages {
+    margin: 3% auto -3% auto;
+  }
+}
+
+@media (min-width: 1200px) {
+  .my-picture {
+    display: block;
+    height: auto;
+    border-radius: 10%;
+    margin: 12% auto 1.5% auto;
+    width: 65%;
+  }
+
+  #about-subtitle {
+    padding-top: 14%;
+  }
+
+  #projects {
+    margin-top: 21%;
+    padding-top: 8%;
+  }
+
+  #contact-subtitle {
+    padding-top: 19%;
+  }
+
+  #end {
+    padding-top: 19.5%;
+  }
+
+  .messages {
+    margin: 3% auto -3% auto;
+  }
+}
+
+@media (min-width: 1400px) {
+  .my-picture {
+    display: block;
+    height: auto;
+    border-radius: 10%;
+    margin: 12% auto 1.5% auto;
+    width: 65%;
+  }
+
+  #about-subtitle {
+    padding-top: 18%;
+  }
+
+  #projects {
+    margin-top: 21%;
+    padding-top: 7%;
+  }
+
+  #contact-subtitle {
+    padding-top: 19%;
+  }
+
+  #end {
+    padding-top: 17.5%;
+  }
+
+  .messages {
+    margin: 3% auto -3% auto;
   }
 }
 
@@ -84,10 +179,6 @@ body {
 
 .body-text {
   font-size: 24px;
-}
-
-.anchors {
-  padding-top: 60px;
 }
 
 .navbar-custom {
