--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <%= render 'layouts/navigation' %>
+    <%= render "layouts/messages" %>
     <%= yield %>
   </body>
   <%= render 'layouts/footer' %>
