--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@
     <div class="col-1"></div>
   </div>
 
-  <div class="anchors" id="about"></div>
+  <div id="about"></div>
   <h2 class="mt-4 subtitle-text text-center" id="about-subtitle">About</h2>
   
   <div class="row">
@@ -70,7 +70,7 @@
     <div class="col-1"></div>
   </div>
 
-  <div class="anchors" id="projects"></div>
+  <div id="projects"></div>
   <h2 class="mt-4 subtitle-text text-center" id="projects-subtitle">Projects</h2>
   <p class='text-white mt-4 body-text text-center'>
     These projects are hosted on Heroku, so please give them a few seconds to fire up. Thank you!
@@ -209,7 +209,7 @@
     <div class="col-1"></div>
   </div>
 
-  <div class="anchors" id="contact"></div>
+  <div id="contact"></div>
   <h2 class="mt-4 subtitle-text text-center" id="contact-subtitle">Contact</h2>
   
   <p class="mt-4 text-white body-text text-center">
@@ -224,7 +224,7 @@
     Alternatively, you may also send me an email directly here:
   </p>
 
-  <!-- Render form here -->
+  <%= render 'contacts/new' %>
 
   <div class="row mt-4">
     <div class="col-1"></div>
